--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<link ref="stylesheet" href="styles.css"
+	<link ref="stylesheet" href="styles.css">
 </head>
 <html>
 	<body>
